cmake_minimum_required(VERSION 2.8)
project(leetcode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(test126 126.cpp)
add_executable(test139 139.cpp)
add_executable(subsets subsets.cpp)
add_executable(test144 144.cpp)
add_executable(test145 145.cpp)
add_executable(find-minimum-in-rotated-sorted-array-ii find-minimum-in-rotated-sorted-array-ii.cpp)
add_executable(valid_palindrome valid_palindrome.cpp)
add_executable(LRUCahce LRUCahce.cpp)
add_executable(two_sum two_sum.cpp)
add_executable(course-schedule-ii course-schedule-ii.cpp)
add_executable(median-of-two-sorted-arrays median-of-two-sorted-arrays.cpp)
add_executable(binary-tree-right-side-view binary-tree-right-side-view.cpp)
add_executable(permutation-sequence permutation-sequence.cpp)
add_executable(longest-consecutive-sequence longest-consecutive-sequence.cpp)
add_executable(binary-tree-maximum-path-sum binary-tree-maximum-path-sum.cpp)
add_executable(p166 166.cpp)
add_executable(longest-common-prefix lcp.cpp)
add_executable(merge-two-sorted-lists merge-two-sorted-lists.cpp)
add_executable(pascal-triangle-ii pascal-triangle-ii.cpp)
add_executable(repeated-dna-sequences repeated-dna-sequences.cpp)
add_executable(reverse-words-in-a-string reverse-words-in-a-string.cpp)
add_executable(same-tree same-tree.cpp)
add_executable(reorder-list reorder-list.cpp)
add_executable(remove-element remove-element.cpp)
add_executable(minimum-depth-of-binary-tree minimum-depth-of-binary-tree.cpp leetcode_tree.cpp)
add_executable(implement-trie-prefix-tree implement-trie-prefix-tree.cpp)
add_executable(reverse-linked-list-ii reverse-linked-list-ii.cpp leetcode_linked_list.h)
add_executable(zigzag-conversion zigzag-conversion.cpp)
add_executable(reverse-nodes-in-k-group reverse-nodes-in-k-group.cpp)
add_executable(reverse-bits reverse-bits.cpp)
add_executable(kth-largest-element-in-an-array kth-largest-element-in-an-array.cpp)
add_executable(longest-valid-parentheses longest-valid-parentheses.cpp)
add_executable(best-time-to-buy-and-sell-stock best-time-to-buy-and-sell-stock.cpp)
add_executable(candy candy.cpp)
add_executable(single-number single-number.cpp)
add_executable(triangle triangle.cpp)
add_executable(best-time-to-buy-and-sell-stock-iv best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(longest-substring-without-repeating-characters longest-substring-without-repeating-characters.cpp)
add_executable(longest-palindromic-substring longest-palindromic-substring.cpp)
add_executable(reverse-integer reverse-integer.cpp)
add_executable(pascals-triangle pascals-triangle.cpp)
add_executable(bitwise-and-of-numbers-range bitwise-and-of-numbers-range.cpp)
add_executable(search-for-a-range search-for-a-range.cpp)
add_executable(sum-root-to-leaf-numbers sum-root-to-leaf-numbers.cpp leetcode_tree.cpp)
add_executable(length-of-last-word length-of-last-word.cpp)
add_executable(combination-sum-iii combination-sum-iii.cpp)
add_executable(scramble-string scramble-string.cpp)
add_executable(binary-tree-postorder-traversal binary-tree-postorder-traversal.cpp leetcode_tree.cpp)
add_executable(contains-duplicate-iii contains-duplicate-iii.cpp)
add_executable(unique-binary-search-trees unique-binary-search-trees.cpp)
add_executable(merge-intervals merge-intervals.cpp)
add_executable(merge-k-sorted-lists merge-k-sorted-lists.cpp)
add_executable(excel-sheet-column-number excel-sheet-column-number.cpp)
add_executable(excel-sheet-column-title excel-sheet-column-title.cpp)